--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Homepage</title>
-  </head>
+<html lang="en">
 
-  <body>
-   <ul>
-     <li>Home</li>
-     <li><a href="pictures.html">Pictures</a></li>
-     <li><a href="projects">Projects</a></li>
-     <li><a href="Social">Social</a></li>
-    </ul><!-- put navigation menu just below here -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
 
-    <h1>Homepage</h1>
+<body>
 
-    <p>Welcome to my exciting homepage</p>
-  </body>
+</body>
+
 </html>
