--- a/Project1/Index.html
+++ b/Project1/Index.html
@@ -7,62 +7,83 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <title>Document</title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif
+    }
+  </style>
 </head>
 
-<body>
 
+
+<header>
   <figure>
     <img src="images/octopus.jpg" alt="A picture of an octopus">
-    <figcaption>A picture of an octopus</figcaption>
+    <figcaption>An octopus in an aquarium in Brest, France. The animals are highly intelligent, but researchers are
+      uncertain how the trait evolved. Fred Tanneau/Agence France-Presse — Getty Images</figcaption>
   </figure>
-  <h1>Yes, the Octopus Is Smart as Heck. But Why?
-    <h2>It has eight arms, three hearts — and a plan. Scientists aren’t sure how the cephalopods got to be so
-      intelligent.</h2>
-    <h3>By Carl Zimmer</h3>
+  <h1>Yes, the Octopus Is Smart as Heck. But Why?</h1>
+  <h2>It has eight arms, three hearts — and a plan. Scientists aren’t sure how the cephalopods got to be so
+    intelligent.</h2>
+  <h3>By Carl Zimmer</h3>
 
-    <h3>Nov. 30, 2018</h3>
-    </head>
+  <h3>Nov. 30, 2018</h3>
+</header>
 
-    <body>
-      <p>To demonstrate how smart an octopus can be, Piero Amodio points to a YouTube video. It shows an octopus
-        pulling two halves of a coconut shell together to hide inside. Later the animal stacks the shells together like
-        nesting bowls — and carts them away.</p>
 
-      <p>“It suggests the octopus is carrying these tools around because it has some understanding they may be useful
-        in the future,” said Mr. Amodio, a graduate student studying animal intelligence at the University of Cambridge
-        in Britain.</p>
+<body>
+  <p>To demonstrate how smart an octopus can be, Piero Amodio points to a YouTube video. It shows an octopus
+    pulling two halves of a coconut shell together to hide inside. Later the animal stacks the shells together like
+    nesting bowls — and carts them away.</p>
 
-      <p>But his amazement is mixed with puzzlement.</p>
+  <p>“It suggests the octopus is carrying these tools around because it has some understanding they may be useful
+    in the future,” said Mr. Amodio, a graduate student studying animal intelligence at the University of Cambridge
+    in Britain.</p>
+  <aside>
+    <blockquote>
+      "Intelligence comprises sophisticated cognitive skills that help and animal thrive."
+    </blockquote>
+  </aside>
 
-      <p>For decades, researchers have studied how certain animals evolved to be intelligent, among them apes,
-        elephants, dolphins and even some birds, such as crows and parrots.</p>
+  <p>But his amazement is mixed with puzzlement.</p>
 
-      <p>But all the scientific theories fail when it comes to cephalopods, a group that includes octopuses, squid and
-        cuttlefish. Despite feats of creativity, they lack some hallmarks of intelligence seen in other species.</p>
+  <p>For decades, researchers have studied how certain animals evolved to be intelligent, among them apes,
+    elephants, dolphins and even some birds, such as crows and parrots.</p>
 
-      <p>“It’s an apparent paradox that’s been largely overlooked in the past,” said Mr. Amodio. He and five other
-        experts on animal intelligence explore this paradox in a paper published this month in the journal Trends in
-        Ecology and Evolution.</p>
+  <p>But all the scientific theories fail when it comes to cephalopods, a group that includes octopuses, squid and
+    cuttlefish. Despite feats of creativity, they lack some hallmarks of intelligence seen in other species.</p>
 
-      <p>For scientists who study animal behavior, intelligence is not about acing a calculus test or taking a car
-        apart and putting it back together. Intelligence comprises sophisticated cognitive skills that help an animal
-        thrive.</p>
+  <p>“It’s an apparent paradox that’s been largely overlooked in the past,” said Mr. Amodio. He and five other
+    experts on animal intelligence explore this paradox in a paper published this month in the journal Trends in
+    Ecology and Evolution.</p>
 
-      <p>That may include the ability to come up with solutions to the problem of finding food, for example, or a knack
-        for planning for some challenge in the future. Intelligent animals don’t rely on fixed responses to survive —
-        they can invent new behaviors on the fly.</p>
+  <p>For scientists who study animal behavior, intelligence is not about acing a calculus test or taking a car
+    apart and putting it back together. Intelligence comprises sophisticated cognitive skills that help an animal
+    thrive.</p>
 
-      <p>To measure animal intelligence, scientists observe creatures in the wild — watching a dolphin stick a sponge
-        on its beak to avoid getting cuts from sharp rocks and coral, for example. Or they bring animals into the lab
-        and offer them puzzles to solve, such as rewarding crows when they learn to rip paper into strips of just the
-        right size.</p>
+  <figure class="body-photo">
+    <img src="images/octopuspicture.jpg" alt="Another picture of an octopus">
+  </figure>
 
-      <p>Only a few species stand out in these studies, and by comparing them, scientists have identified some shared
-        factors. The animals have big brains relative to their body size, they live for a long time, and they can form
-        long-lasting social bonds.</p>
 
-    </body>
+
+
+  <p>That may include the ability to come up with solutions to the problem of finding food, for example, or a knack
+    for planning for some challenge in the future. Intelligent animals don’t rely on fixed responses to survive —
+    they can invent new behaviors on the fly.</p>
+
+  <p>To measure animal intelligence, scientists observe creatures in the wild — watching a dolphin stick a sponge
+    on its beak to avoid getting cuts from sharp rocks and coral, for example. Or they bring animals into the lab
+    and offer them puzzles to solve, such as rewarding crows when they learn to rip paper into strips of just the
+    right size.</p>
+
+  <p>Only a few species stand out in these studies, and by comparing them, scientists have identified some shared
+    factors. The animals have big brains relative to their body size, they live for a long time, and they can form
+    long-lasting social bonds.</p>
 
 </body>
+
 
 </html>
