--- a/Project1/Index.html
+++ b/Project1/Index.html
@@ -41,7 +41,7 @@
   <p>“It suggests the octopus is carrying these tools around because it has some understanding they may be useful
     in the future,” said Mr. Amodio, a graduate student studying animal intelligence at the University of Cambridge
     in Britain.</p>
-  <aside>
+  <aside clearfix>
     <blockquote>
       "Intelligence comprises sophisticated cognitive skills that help and animal thrive."
     </blockquote>
@@ -63,7 +63,7 @@
     apart and putting it back together. Intelligence comprises sophisticated cognitive skills that help an animal
     thrive.</p>
 
-  <figure class="body-photo">
+  <figure class="body-photo cleafix">
     <img src="images/octopuspicture.jpg" alt="Another picture of an octopus">
   </figure>
 
