--- a/Project1/Index.html
+++ b/Project1/Index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>GD2 Project 1</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <style>
