--- a/Project1/Index.html
+++ b/Project1/Index.html
@@ -20,21 +20,24 @@
 
 <header>
   <figure>
+    <h1>Yes, the Octopus Is Smart as Heck. But Why?</h1>
+    <h2>It has eight arms, three hearts — and a plan. Scientists aren’t sure how the cephalopods got to be so
+      intelligent.</h2>
     <img src="images/octopus.jpg" alt="A picture of an octopus">
     <figcaption>An octopus in an aquarium in Brest, France. The animals are highly intelligent, but researchers are
       uncertain how the trait evolved. Fred Tanneau/Agence France-Presse — Getty Images</figcaption>
   </figure>
-  <h1>Yes, the Octopus Is Smart as Heck. But Why?</h1>
-  <h2>It has eight arms, three hearts — and a plan. Scientists aren’t sure how the cephalopods got to be so
-    intelligent.</h2>
+
+
   <h3>By Carl Zimmer</h3>
 
-  <h3>Nov. 30, 2018</h3>
+  <h4>Nov. 30, 2018</h4>
 </header>
 
 
 <body>
-  <p>To demonstrate how smart an octopus can be, Piero Amodio points to a YouTube video. It shows an octopus
+  <p>To demonstrate how smart an octopus can be, Piero Amodio points to a <span>YouTube video</span>. It shows an
+    octopus
     pulling two halves of a coconut shell together to hide inside. Later the animal stacks the shells together like
     nesting bowls — and carts them away.</p>
 
@@ -43,7 +46,7 @@
     in Britain.</p>
   <aside clearfix>
     <blockquote>
-      "Intelligence comprises sophisticated cognitive skills that help and animal thrive."
+      "Intelligence comprises sophisticated cognitive skills that help an animal thrive."
     </blockquote>
   </aside>
 
@@ -64,7 +67,7 @@
     thrive.</p>
 
   <figure class="body-photo cleafix">
-    <img src="images/octopuspicture.jpg" alt="Another picture of an octopus">
+    <img src="images/octopuspicture.jpg" alt="Second picture of an octopus">
   </figure>
 
 
