--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,10 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="mainimage">
+        <div class="content">
+            <div class="details">
+                <div class="titletext">
+                    <h1>
+                        The Favourite
+                    </h1>
+                </div>
+
+                <h2>2018
+                    Yorgos Lanthimos
+                    2h 1m
+                    R
+                    Drama/Comedy </h2>
+                <p>In early 18th century England, a frail Queen Anne
+                    occupies the throne and her close friend, Lady Sarah,
+                    governs the country in her stead. When a new servant,
+                    Abigail, arrives, her charm endears her to Sarah.</p>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+
 
 </body>
 
