--- a/Project3/index.html
+++ b/Project3/index.html
@@ -5,11 +5,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <title>GD2 Project 3</title>
 </head>
 
 <body>
+    <div class="timeline">
+        <header>
+            <h1></h1>
+            <h2>March 25th</h2>
+        </header>
+        <div class="timelinepictures">
+            <div class="timelineitem">
+                <div class="times">
+                    <h3> 8am</h3>
+                    <h3>9am</h3>
+                    <h3>10am</h3>
+                    <h3>11am</h3>
+                    <h3>12pm</h3>
+                    <h3>1pm</h3>
+                    <h3>2pm</h3>
+                    <h3>3pm</h3>
+                    <h3>4pm</h3>
+                    <h3>5pm</h3>
+                    <h3>6pm</h3>
+                    <h3>7pm</h3>
+                    <h3>8pm</h3>
+                    <h3>9pm</h3>
+                </div>
+                <figure><img src="images/TimelineImage1.png" alt="8amimage">
+                    <figcaption>Monday morning, I woke up around 8. </figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage2.png" alt="9amimage">
+                    <figcaption>Making and drinking a pot of coffee before going to the library.</figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage3.png" alt="10amimage">
+                    <figcaption>At the library looking for a book I can use for my typography 2 project.</figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage4.png" alt="11amimage">
+                    <figcaption>Walking back to my apartment after leaving the library.</figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage5.png" alt="12pmimage">
+                    <figcaption>Reading my book that I will be using for my typography class.</figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage6.png" alt="1pmimage">
+                    <figcaption>Working on my project for Typography 2 instead of going to my
+                        forum lecture because it did sound interesting to me.
+                    </figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage7.png" alt="2pmimage">
+                    <figcaption>At the Motor House acrossed the bridge on North Ave. This
+                        is where my forum 2 class was today.
+                    </figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage8.png" alt="3pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage9.png" alt="4pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage10.png" alt="5pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage12.png" alt="7pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage13.png" alt="8pmimage">
+                    <figcaption></figcaption>
+                </figure>
+                <figure><img src="images/TimelineImage14.png" alt="9pmimage">
+                    <figcaption></figcaption>
+                </figure>
+            </div>
+
+
+
+        </div>
+
+
+
+    </div>
+
 
 </body>
 
-</html>'
+</html>
