--- a/Project3/index.html
+++ b/Project3/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <title>GD2 Project 3</title>
 </head>
@@ -13,82 +14,85 @@
 <body>
     <div class="timeline">
         <header>
-            <h1></h1>
-            <h2>March 25th</h2>
+            <h1>My Day: March 25</h1>
         </header>
-        <div class="timelinepictures">
-            <div class="timelineitem">
-                <div class="times">
-                    <h3> 8am</h3>
-                    <h3>9am</h3>
-                    <h3>10am</h3>
-                    <h3>11am</h3>
-                    <h3>12pm</h3>
-                    <h3>1pm</h3>
-                    <h3>2pm</h3>
-                    <h3>3pm</h3>
-                    <h3>4pm</h3>
-                    <h3>5pm</h3>
-                    <h3>6pm</h3>
-                    <h3>7pm</h3>
-                    <h3>8pm</h3>
-                    <h3>9pm</h3>
-                </div>
-                <figure><img src="images/TimelineImage1.png" alt="8amimage">
-                    <figcaption>Monday morning, I woke up around 8. </figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage2.png" alt="9amimage">
-                    <figcaption>Making and drinking a pot of coffee before going to the library.</figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage3.png" alt="10amimage">
-                    <figcaption>At the library looking for a book I can use for my typography 2 project.</figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage4.png" alt="11amimage">
-                    <figcaption>Walking back to my apartment after leaving the library.</figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage5.png" alt="12pmimage">
-                    <figcaption>Reading my book that I will be using for my typography class.</figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage6.png" alt="1pmimage">
-                    <figcaption>Working on my project for Typography 2 instead of going to my
-                        forum lecture because it did sound interesting to me.
-                    </figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage7.png" alt="2pmimage">
-                    <figcaption>At the Motor House acrossed the bridge on North Ave. This
-                        is where my forum 2 class was today.
-                    </figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage8.png" alt="3pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage9.png" alt="4pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage10.png" alt="5pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage12.png" alt="7pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage13.png" alt="8pmimage">
-                    <figcaption></figcaption>
-                </figure>
-                <figure><img src="images/TimelineImage14.png" alt="9pmimage">
-                    <figcaption></figcaption>
-                </figure>
-            </div>
+        <div class="timelineitem">
+            <figure> <img src="images/TimelineImage1.png" alt="8amimage">
+                <figcaption>Monday morning, I woke up around 8am. My plan for the day was to work on
+                    my Typography 2 homework before my forum class. </figcaption>
+            </figure>
 
-
-
+            <figure><img src="images/TimelineImage2.png" alt="9amimage">
+                <figcaption>Making a pot of coffee before going to the library.</figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage3.png" alt="10amimage">
+                <figcaption>At the library looking for a book I can use for my typography 2 project. I ended up checking
+                    out
+                    A Designer's Perspective and Something From Nothing. I ended up picking A Designer's Perspective for
+                    my project.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage4.png" alt="11amimage">
+                <figcaption>Walking back to my apartment after leaving the library.</figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage5.png" alt="12pmimage">
+                <figcaption>Reading my book that I will be using for my typography class.</figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage6.png" alt="1pmimage">
+                <figcaption>Working on my project for Typography 2 instead of going to my
+                    forum lecture because it did not sound interesting to me. I like to do all of
+                    my work last minute because that way I can guarantee to stress myself out.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage7.png" alt="2pmimage">
+                <figcaption>At the Motor House acrossed the bridge on North Ave. This
+                    is where my forum 2 class was today. I am new to Baltimore and have not ventured out into the
+                    Station North area yet, I am hoping to at some point soon.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage8.png" alt="3pmimage">
+                <figcaption>Walking back to my apartment on break from class. I picked up some french fries
+                    and ate them while walking in the rain, for no discernible reason. </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage9.png" alt="4pmimage">
+                <figcaption>Leaving my forum class and walking back to my apartment once again. </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage10.png" alt="5pmimage">
+                <figcaption>Cooking myself dinner. I cooked some seitan and broccoli.
+                    I season everything with lemon pepper, garlic salt, and crushed red pepper.
+                </figcaption>
+            </figure>
+            <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
+                <figcaption>Working on my concept design for this project! I ended up changing some aspects
+                    but kept it basically the same.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage12.png" alt="7pmimage">
+                <figcaption>Working on my drawings for class. I am terrible at drawings but
+                    I feel as though I have learned some new skills that I may never use again.
+                    Who knows.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage13.png" alt="8pmimage">
+                <figcaption>Decided to stop working on my drawings and
+                    continue work on my Typography project.
+                </figcaption>
+            </figure>
+            <figure><img src="images/TimelineImage14.png" alt="9pmimage">
+                <figcaption>After a day of half accomplishing my goals, and deciding for no reason
+                    to save the rest for tomorrow, I go to bed.
+                </figcaption>
+            </figure>
         </div>
 
 
 
     </div>
+
+
+
+    </div>
+
 
 
 </body>
