--- a/Project3/index.html
+++ b/Project3/index.html
@@ -17,72 +17,101 @@
             <h1>My Day: March 25</h1>
         </header>
         <div class="timelineitem">
-            <figure> <img src="images/TimelineImage1.png" alt="8amimage">
-                <figcaption>Monday morning, I woke up around 8am. My plan for the day was to work on
-                    my Typography 2 homework before my forum class. </figcaption>
-            </figure>
-
-            <figure><img src="images/TimelineImage2.png" alt="9amimage">
-                <figcaption>Making a pot of coffee before going to the library.</figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage3.png" alt="10amimage">
-                <figcaption>At the library looking for a book I can use for my typography 2 project. I ended up checking
-                    out
-                    A Designer's Perspective and Something From Nothing. I ended up picking A Designer's Perspective for
-                    my project.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage4.png" alt="11amimage">
-                <figcaption>Walking back to my apartment after leaving the library.</figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage5.png" alt="12pmimage">
-                <figcaption>Reading my book that I will be using for my typography class.</figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage6.png" alt="1pmimage">
-                <figcaption>Working on my project for Typography 2 instead of going to my
-                    forum lecture because it did not sound interesting to me. I like to do all of
-                    my work last minute because that way I can guarantee to stress myself out.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage7.png" alt="2pmimage">
-                <figcaption>At the Motor House acrossed the bridge on North Ave. This
-                    is where my forum 2 class was today. I am new to Baltimore and have not ventured out into the
-                    Station North area yet, I am hoping to at some point soon.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage8.png" alt="3pmimage">
-                <figcaption>Walking back to my apartment on break from class. I picked up some french fries
-                    and ate them while walking in the rain, for no discernible reason. </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage9.png" alt="4pmimage">
-                <figcaption>Leaving my forum class and walking back to my apartment once again. </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage10.png" alt="5pmimage">
-                <figcaption>Cooking myself dinner. I cooked some seitan and broccoli.
-                    I season everything with lemon pepper, garlic salt, and crushed red pepper.
-                </figcaption>
-            </figure>
-            <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
-                <figcaption>Working on my concept design for this project! I ended up changing some aspects
-                    but kept it basically the same.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage12.png" alt="7pmimage">
-                <figcaption>Working on my drawings for class. I am terrible at drawings but
-                    I feel as though I have learned some new skills that I may never use again.
-                    Who knows.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage13.png" alt="8pmimage">
-                <figcaption>Decided to stop working on my drawings and
-                    continue work on my Typography project.
-                </figcaption>
-            </figure>
-            <figure><img src="images/TimelineImage14.png" alt="9pmimage">
-                <figcaption>After a day of half accomplishing my goals, and deciding for no reason
-                    to save the rest for tomorrow, I go to bed.
-                </figcaption>
-            </figure>
+            <div class="hourwrapper">
+                <figure> <img src="images/TimelineImage1.png" alt="8amimage">
+                    <figcaption>Monday morning, I woke up around 8am. My plan for the day was to work on
+                        my Typography 2 homework before my forum class. </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage2.png" alt="9amimage">
+                    <figcaption>Making a pot of coffee before going to the library.</figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage3.png" alt="10amimage">
+                    <figcaption>At the library looking for a book I can use for my typography 2 project. I ended up
+                        checking
+                        out
+                        A Designer's Perspective and Something From Nothing. I ended up picking A Designer's Perspective
+                        for
+                        my project.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage4.png" alt="11amimage">
+                    <figcaption>Walking back to my apartment after leaving the library.</figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage5.png" alt="12pmimage">
+                    <figcaption>Reading my book that I will be using for my typography class.</figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage6.png" alt="1pmimage">
+                    <figcaption>Working on my project for Typography 2 instead of going to my
+                        forum lecture because it did not sound interesting to me. I like to do all of
+                        my work last minute because that way I can guarantee to stress myself out.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage7.png" alt="2pmimage">
+                    <figcaption>At the Motor House acrossed the bridge on North Ave. This
+                        is where my forum 2 class was today. I am new to Baltimore and have not ventured out into the
+                        Station North area yet, I am hoping to at some point soon.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage8.png" alt="3pmimage">
+                    <figcaption>Walking back to my apartment on break from class. I picked up some french fries
+                        and ate them while walking in the rain, for no discernible reason. </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage9.png" alt="4pmimage">
+                    <figcaption>Leaving my forum class and walking back to my apartment once again. </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage10.png" alt="5pmimage">
+                    <figcaption>Cooking myself dinner. I cooked some seitan and broccoli.
+                        I season everything with lemon pepper, garlic salt, and crushed red pepper.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
+                    <figcaption>Working on my concept design for this project! I ended up changing some aspects
+                        but kept it basically the same.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage12.png" alt="7pmimage">
+                    <figcaption>Working on my drawings for class. I am terrible at drawings but
+                        I feel as though I have learned some new skills that I may never use again.
+                        Who knows.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage13.png" alt="8pmimage">
+                    <figcaption>Decided to stop working on my drawings and
+                        continue work on my Typography project.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="hourwrapper">
+                <figure><img src="images/TimelineImage14.png" alt="9pmimage">
+                    <figcaption>After a day of half accomplishing my goals, and deciding for no reason
+                        to save the rest for tomorrow, I go to bed.
+                    </figcaption>
+                </figure>
+            </div>
         </div>
 
 
