--- a/Project3/index.html
+++ b/Project3/index.html
@@ -12,118 +12,184 @@
 </head>
 
 <body>
-    <div class="timeline">
-        <header>
-            <h1>My Day: March 25</h1>
-        </header>
+    <header>
+        <h1>My Day March 25th</h1>
+    </header>
+
+
+    <div class="container">
         <div class="timelineitem">
-            <div class="hourwrapper">
-                <figure> <img src="images/TimelineImage1.png" alt="8amimage">
-                    <figcaption>Monday morning, I woke up around 8am. My plan for the day was to work on
-                        my Typography 2 homework before my forum class. </figcaption>
-                </figure>
+            <div class="imgbox">
+                <img src="images/TimelineImage1.png" alt='houronephoto'>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage2.png" alt="9amimage">
-                    <figcaption>Making a pot of coffee before going to the library.</figcaption>
-                </figure>
+            <div class="details">
+                <div class="content">
+                    <h2> 8AM </h2>
+                    <p> Monday morning, I woke up around 8am. My plan for the day was to work on
+                        my Typography 2 homework before my forum class </p>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage3.png" alt="10amimage">
-                    <figcaption>At the library looking for a book I can use for my typography 2 project. I ended up
-                        checking
-                        out
-                        A Designer's Perspective and Something From Nothing. I ended up picking A Designer's Perspective
-                        for
-                        my project.
-                    </figcaption>
-                </figure>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage2.png" alt='hourtwophoto'>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage4.png" alt="11amimage">
-                    <figcaption>Walking back to my apartment after leaving the library.</figcaption>
-                </figure>
+            <div class="details">
+                <div class="content">
+                    <h2> 9AM </h2>
+                    <p> Making a pot of coffee before going to the library.</p>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage5.png" alt="12pmimage">
-                    <figcaption>Reading my book that I will be using for my typography class.</figcaption>
-                </figure>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage3.png" alt='hourthreephoto'>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage6.png" alt="1pmimage">
-                    <figcaption>Working on my project for Typography 2 instead of going to my
+            <div class="details">
+                <div class="content">
+                    <h2> 10AM </h2>
+                    <h3> At the library looking for a book I can use for my typography 2 project. I ended up checking
+                        out A Designer's Perspective and Something From Nothing. I ended up picking A Designer's
+                        Perspectivefor my project.
+                    </h3>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage4.png" alt='hourfourphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 11AM </h2>
+                    <p> Walking back to my apartment after leaving the library.</p>
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage5.png" alt='hourfivephoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 12PM </h2>
+                    <p> Reading my book that I will be using for my typography class.</p>
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage6.png" alt='hoursixphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 1PM </h2>
+                    <h3> Working on my project for Typography 2 instead of going to my
                         forum lecture because it did not sound interesting to me. I like to do all of
-                        my work last minute because that way I can guarantee to stress myself out.
-                    </figcaption>
-                </figure>
+                        my work last minute because that way I can guarantee to stress myself out.</h3>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage7.png" alt="2pmimage">
-                    <figcaption>At the Motor House acrossed the bridge on North Ave. This
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage7.png" alt='hoursevenphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 3PM </h2>
+                    <h3> At the Motor House acrossed the bridge on North Ave. This
                         is where my forum 2 class was today. I am new to Baltimore and have not ventured out into the
-                        Station North area yet, I am hoping to at some point soon.
-                    </figcaption>
-                </figure>
+                        Station North area yet, I am hoping to at some point soon.</h3>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage8.png" alt="3pmimage">
-                    <figcaption>Walking back to my apartment on break from class. I picked up some french fries
-                        and ate them while walking in the rain, for no discernible reason. </figcaption>
-                </figure>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage8.png" alt='houreightphoto'>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage9.png" alt="4pmimage">
-                    <figcaption>Leaving my forum class and walking back to my apartment once again. </figcaption>
-                </figure>
+            <div class="details">
+                <div class="content">
+                    <h2> 5PM </h2>
+                    <p> Walking back to my apartment on break from class. I picked up some french fries
+                        and ate them while walking in the rain, for no discernible reason.</p>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage10.png" alt="5pmimage">
-                    <figcaption>Cooking myself dinner. I cooked some seitan and broccoli.
-                        I season everything with lemon pepper, garlic salt, and crushed red pepper.
-                    </figcaption>
-                </figure>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage9.png" alt='hourninephoto'>
             </div>
-            <div class="hourwrapper">
-                <figure> <img src="images/TimelineImage11.png" alt="6pmimage">
-                    <figcaption>Working on my concept design for this project! I ended up changing some aspects
-                        but kept it basically the same.
-                    </figcaption>
-                </figure>
+            <div class="details">
+                <div class="content">
+                    <h2> 8PM </h2>
+                    <p> Leaving my forum class and walking back to my apartment once again.</p>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage12.png" alt="7pmimage">
-                    <figcaption>Working on my drawings for class. I am terrible at drawings but
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage10.png" alt='hourtenphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 9PM </h2>
+                    <p> Cooking myself dinner. I cooked some seitan and broccoli.
+                        I season everything with lemon pepper, garlic salt, and crushed red pepper.</p>
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage11.png" alt='hourelevenphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 10PM </h2>
+                    <p> Working on my concept design for this project! I ended up changing some aspects
+                        but kept it basically the same.</p>
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage12.png" alt='hourtwelvephoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 11PM </h2>
+                    <p> Working on my drawings for class. I am terrible at drawings but
                         I feel as though I have learned some new skills that I may never use again.
-                        Who knows.
-                    </figcaption>
-                </figure>
+                        Who knows.</p>
+                </div>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage13.png" alt="8pmimage">
-                    <figcaption>Decided to stop working on my drawings and
-                        continue work on my Typography project.
-                    </figcaption>
-                </figure>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage13.png" alt='hourthirteenphoto'>
             </div>
-            <div class="hourwrapper">
-                <figure><img src="images/TimelineImage14.png" alt="9pmimage">
-                    <figcaption>After a day of half accomplishing my goals, and deciding for no reason
-                        to save the rest for tomorrow, I go to bed.
-                    </figcaption>
-                </figure>
+            <div class="details">
+                <div class="content">
+                    <h2> 12AM </h2>
+                    <p> Decided to stop working on my drawings and
+                        continue work on my Typography project.</p>
+                </div>
+            </div>
+        </div>
+        <div class="timelineitem">
+            <div class="imgbox">
+                <img src="images/TimelineImage14.png" alt='hourfourteenphoto'>
+            </div>
+            <div class="details">
+                <div class="content">
+                    <h2> 1AM </h2>
+                    <p> After a day of half accomplishing my goals, and deciding for no reason
+                        to save the rest for tomorrow, I go to bed.</p>
+                </div>
             </div>
         </div>
 
 
-
     </div>
-
-
-
-    </div>
-
-
-
 </body>
-
-</html>
