--- a/Project3/index.html
+++ b/Project3/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>My Day March 25th</h1>
+        <h1>My Day: March 25th</h1>
     </header>
 
 
@@ -26,7 +26,7 @@
                 <div class="content">
                     <h2> 8AM </h2>
                     <p> Monday morning, I woke up around 8am. My plan for the day was to work on
-                        my Typography 2 homework before my forum class </p>
+                        my Typography 2 homework before my forum class. </p>
                 </div>
             </div>
         </div>
@@ -37,7 +37,9 @@
             <div class="details">
                 <div class="content">
                     <h2> 9AM </h2>
-                    <p> Making a pot of coffee before going to the library.</p>
+                    <p> Making a pot of coffee before going to the library. I usually try
+                        to have a least two cups, if not the entire pot. I also had a bowl of oatmeal.
+                    </p>
                 </div>
             </div>
         </div>
@@ -50,7 +52,7 @@
                     <h2> 10AM </h2>
                     <h3> At the library looking for a book I can use for my typography 2 project. I ended up checking
                         out A Designer's Perspective and Something From Nothing. I ended up picking A Designer's
-                        Perspectivefor my project.
+                        Perspective for my project.
                     </h3>
 
 
@@ -64,7 +66,9 @@
             <div class="details">
                 <div class="content">
                     <h2> 11AM </h2>
-                    <p> Walking back to my apartment after leaving the library.</p>
+                    <h3> Walking back to my apartment after leaving the library. I was planning on
+                        getting some more homework done before class,
+                        which is great in theory but who knows if i will. </h3>
                 </div>
             </div>
         </div>
@@ -75,7 +79,11 @@
             <div class="details">
                 <div class="content">
                     <h2> 12PM </h2>
-                    <p> Reading my book that I will be using for my typography class.</p>
+                    <h4> Reading my book that I will be using for my typography class. The project
+                        is about how to create a typographic dialogue between two different
+                        texts. The text I was assigned is Frank Chimero's How and Why.
+                        For my secondary text I chose a book about Bruno Monguzzi. He is a Swedish graphic
+                        designer. The book features a small biography and an interview.</h4>
                 </div>
             </div>
         </div>
@@ -87,8 +95,9 @@
                 <div class="content">
                     <h2> 1PM </h2>
                     <h3> Working on my project for Typography 2 instead of going to my
-                        forum lecture because it did not sound interesting to me. I like to do all of
-                        my work last minute because that way I can guarantee to stress myself out.</h3>
+                        forum lecture because it did not sound interesting to me. Also I needed to
+                        get more work done. I like to do all of
+                        my work last minute because that way I can guarantee to stress myself out. </h3>
                 </div>
             </div>
         </div>
@@ -101,7 +110,7 @@
                     <h2> 3PM </h2>
                     <h3> At the Motor House acrossed the bridge on North Ave. This
                         is where my forum 2 class was today. I am new to Baltimore and have not ventured out into the
-                        Station North area yet, I am hoping to at some point soon.</h3>
+                        Station North area yet, I am hoping to at some point soon. </h3>
                 </div>
             </div>
         </div>
@@ -112,8 +121,11 @@
             <div class="details">
                 <div class="content">
                     <h2> 5PM </h2>
-                    <p> Walking back to my apartment on break from class. I picked up some french fries
-                        and ate them while walking in the rain, for no discernible reason.</p>
+                    <h4> Walking back to my apartment on break from class. I picked up some french fries
+                        and ate them while walking in the rain, for no discernible reason. I am from the suburbs
+                        of Delaware so I am not used to walking around everywhere. I do enjoy the ability to walk to
+                        class from my apartment and back. I should be walking more often anyway so I can pretend
+                        walking to class is exercise.</h4>
                 </div>
             </div>
         </div>
@@ -124,7 +136,10 @@
             <div class="details">
                 <div class="content">
                     <h2> 8PM </h2>
-                    <p> Leaving my forum class and walking back to my apartment once again.</p>
+                    <p> Leaving my forum class and walking back to my apartment once again. It was finished raining,
+                        which
+                        was great.
+                    </p>
                 </div>
             </div>
         </div>
@@ -172,8 +187,9 @@
             <div class="details">
                 <div class="content">
                     <h2> 12AM </h2>
-                    <p> Decided to stop working on my drawings and
-                        continue work on my Typography project.</p>
+                    <h3> Decided to stop working on my drawings and
+                        continue work on my Typography project. If I am being honest, shortly after
+                        this photo was taken I went back to watching Boardwalk Empire.</h3>
                 </div>
             </div>
         </div>
