--- a/Project4/index.html
+++ b/Project4/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <main class="container">
         <header>
 
 
@@ -51,8 +51,8 @@
                     <img src="images/speaker1_variant4.png" class="speaker-photo" alt="annieatkinsphoto">
                     <div class="details">
                         <h3>Annie Atkins</h3>
-                        <p>Graphic Designer for films<br>
-                            such as Grand Budapest Hotel,<br>
+                        <p>Graphic Designer for films
+                            such as Grand Budapest Hotel,
                             and Boxtrolls.</p>
                     </div>
                 </div>
@@ -77,11 +77,11 @@
             <section id="schedule">
                 <h2>Schedule</h2>
                 <img src="images/linegraphic.svg" alt="">
-                <p>10:30am - 11:45am - Annie Atkins: The Secret World of </p>
+                <p>10:30am - 11:45am - Annie Atkins: The Secret World of Design for Film</p>
                 <img src="images/linegraphic.svg" alt="">
-                <p>10:30am - 11:45am - Annie Atkins: The Secret World of </p>
+                <p>12:15pm - 1:15pm - Ryan Moldenhauer: UI/UX for Video Games</p>
                 <img src="images/linegraphic.svg" alt="">
-                <p>10:30am - 11:45am - Annie Atkins: The Secret World of </p>
+                <p>2:00pm - 3pm - Kyle Bean: Applying Personal Style for Brands</p>
             </section>
             <section id="contact">
                 <h2>Contact</h2>
@@ -106,7 +106,7 @@
         </div>
 
 
-    </div>
+    </main>
 
 </body>
 
